# www

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CNAME  LICENSE  README.md  SkunkScrape – Meta Business Connect.html  docker-compose.yml  index.html  main.py  pyproject.toml  skunkscrape_landing_card.html
.github/workflows/: pages.yml  release-check.yml  tests.yml
backend/: requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: jobs.py
backend/app/core/: config.py
backend/app/models/: job.py
backend/app/schemas/: job.py
backend/app/services/: jobs.py
backend/app/workers/: celery_app.py  tasks.py
data/release_snapshots/: release_snapshot_2026-03-21_06-18-17.txt
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/(dashboard)/jobs/: page.tsx
frontend/app/(dashboard)/jobs/[id]/: page.tsx
frontend/app/(dashboard)/jobs/new/: page.tsx
frontend/app/(dashboard)/sources/: page.tsx
frontend/components/: nav.tsx
frontend/components/layout/: app-sidebar.tsx
frontend/lib/: api.ts
infra/nginx/: default.conf
privacy/: index.html
scripts/: bootstrap_dev.ps1  clean_artifacts.ps1  commit_project.ps1  commit_ready.ps1  release_snapshot.ps1  repo_status.ps1  run_crawler.ps1  run_tests.ps1  tag_release.ps1  version_bump.ps1
skunkscrape/: __init__.py
skunkscrape/plugins/: __init__.py  manifest.json  smart_contact_crawler.py
terms/: index.html
tests/: test_changelog_exists.py  test_github_workflow_exists.py  test_main.py  test_manifest.py  test_operational_scripts.py  test_release_snapshot_script_exists.py  test_release_workflow_exists.py  test_run_plugin_options.py  test_smart_contact_crawler.py  test_tag_release_script_exists.py  test_version_bump_script_exists.py
