[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skunkscrape"
version = "2.2.1"
description = "SkunkScrape plugin-driven scraping and contact discovery toolkit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Raydo Matthee", email = "raydo@skunkworks.africa" }
]
keywords = [
  "scraping",
  "lead-generation",
  "contact-discovery",
  "crawler",
  "automation",
  "skunkscrape"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Information Technology",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "requests>=2.32,<3",
  "beautifulsoup4>=4.12,<5"
]

[project.optional-dependencies]
html = [
  "lxml>=5,<7"
]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.6,<1",
  "black>=24,<25",
  "mypy>=1.11,<2",
  "build>=1.2,<2"
]

[project.urls]
Homepage = "https://www.skunkworks.africa"
Repository = "https://github.com/SkunkworksZA/SKUNKSCRAPE"
Documentation = "https://www.skunkworks.africa"
Issues = "https://github.com/SkunkworksZA/SKUNKSCRAPE/issues"

[project.scripts]
skunkscrape = "main:main"

[tool.setuptools]
include-package-data = true
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["skunkscrape*"]
namespaces = true

[tool.setuptools.package-data]
skunkscrape = ["plugins/manifest.json"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true